// Copyright 2023 The olive Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package discoverypb;

option go_package = "github.com/olive-io/olive/api/discoverypb;discoverypb";
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

import "gogoproto/gogo.proto";
import "github.com/olive-io/olive/api/discoverypb/discovery.proto";

// for grpc-gateway
import "google/api/annotations.proto";

service NodeRPC {
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
      post: "/v1/olive/node/ping",
      body: "*"
    };
  };

  rpc Call(CallRequest) returns (CallResponse) {
    option (google.api.http) = {
      post: "/v1/olive/node/call",
      body: "*"
    };
  }
}

message PingRequest {}

message PingResponse {
  string reply = 1;
}

message CallRequest {
  discoverypb.Activity activity = 1;
  map<string, string> headers = 2;
  map<string, bytes> properties = 3;
  map<string, bytes> dataObjects = 4;
}

message CallResponse {
  map<string, bytes> properties = 1;
  map<string, bytes> dataObjects = 2;
}